[tool.poetry]
name = "lambo"
version = "0.1.0"
description = ""
authors = ["HKGx <19597269+HKGx@users.noreply.github.com>"]

[tool.poetry.scripts]
lambo = 'lambo:main'

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
tortoise-orm = { extras = ["aiosqlite"], version = "^0.18.1" }
py-cord = "^2.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^5.2"
autopep8 = "^1.6.0"
black = { version = "^22.3.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
