[tool.isort]
profile = "black"

[tool.poetry]
name = "lambo"
version = "0.1.0"
description = ""
authors = ["HKGx <19597269+HKGx@users.noreply.github.com>"]

[tool.poetry.scripts]
lambo = 'lambo:main'

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
tortoise-orm = "^0.19.2"
py-cord = "^2.3.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
pytest = "^7.2.1"
autopep8 = "^2.0.1"
black = { version = "^23.1a1", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
